src/components/domain/meeting/MeetingItemCard.module.scss
.meetingItemCardWithDelete {
  position: relative;
  width: 100%;
  display: flex;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;

  .delete {
    position: absolute;
    right: 0;
    top: 0;
    z-index: 1;

    width: 72px;
    height: 100%;
    cursor: pointer;
    z-index: 1;
    background-color: $color-cream-100;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .swipeTrack {
    position: relative;
    z-index: 2;
    width: 100%;
    will-change: transform;
    touch-action: pan-y;
  }

  .meetingItemCard {
    width: 100%;
    height: 4rem;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: start;

    border-radius: 8px;

    background-color: white;

    font-family: Pretendard;

    cursor: pointer;

    &__leftEdge {
      width: 8px;
      height: 100%;

      border-top-left-radius: 8px;
      border-bottom-left-radius: 8px;

      background-color: $color-orange-100;
      &.success {
        background-color: $color-orange-10;
      }
      &.incomplete {
        background-color: $color-orange-100;
      }
      &.fail {
        background-color: $color-gray-200;
      }
    }

    &__dataArea {
      flex: 1;

      display: flex;
      flex-direction: column;
      align-items: start;
      justify-content: space-between;
      gap: 12px;

      padding: 12px 13px;

      &__meetingInfo {
        width: 100%;

        display: flex;
        flex-direction: column;
        justify-content: space-between;
        gap: 5px;
        &__meetingName {
          font-size: 17px;
          font-style: normal;
          font-weight: 600;
          line-height: 23.1px;
          letter-spacing: 0.17px;

          color: $color-gray-500;
        }
        &__meetingDetail {
          font-size: 14px;
          font-style: normal;
          font-weight: 500;
          line-height: normal;

          color: $color-gray-400;

          &.incompleteText {
            color: $color-orange-4;
          }

          &.failText {
            color: $color-gray-200;
          }
        }
      }

      &__meetingState {
        font-size: 11px;
        font-weight: 400;
      }
    }
  }

  &[data-status="MATCHING"] {
    .meetingItemCard {
      width: 85%;
    }
  }
}

